Added documentation/fixed formatting

--- a/app/views/admin/adminalert.scala.html
+++ b/app/views/admin/adminalert.scala.html
@@ -56,21 +56,26 @@ Copyright 2013 Anthony Christe
       </thead>
       <tbody>
 
-      @for(alertForm <- alertNotificationForms) {
-        @form(routes.Administration.updateAlert(alertForm("primaryKey").value), 'class -> "form-inline") {
-        <tr>
-          <td>@inputText(alertForm("deviceId"), '_showConstraints -> false, '_label -> "", 'class -> "", 'readonly -> "readonly")</td>
-          <td>@checkbox(alertForm("voltageAlertNotification"), '_showConstraints -> false, '_label -> "")</td>
-          <td>@inputText(alertForm("minAcceptableVoltage"), '_showConstraints -> false, '_label -> "", 'class -> "input-mini")</td>
-          <td>@inputText(alertForm("maxAcceptableVoltage"), '_showConstraints -> false, '_label -> "", 'class -> "input-mini")</td>
-          <td>@checkbox(alertForm("frequencyAlertNotification"), '_showConstraints -> false, '_label -> "")</td>
-          <td>@inputText(alertForm("minAcceptableFrequency"), '_showConstraints -> false, '_label -> "", 'class -> "input-mini")</td>
-          <td>@inputText(alertForm("maxAcceptableFrequency"), '_showConstraints -> false, '_label -> "", 'class -> "input-mini")</td>
-          <td>@checkbox(alertForm("deviceAlertNotification"), '_showConstraints -> false, '_label -> "")</td>
-          <td><input type="submit" class="btn btn-warning pull-right" value="Update"></td>
-        </tr>
+        @for(alertForm <- alertNotificationForms) {
+          @form(routes.Administration.updateAlert(alertForm("primaryKey").value), 'class -> "form-inline") {
+            <tr>
+              <td>@inputText(alertForm("deviceId"), '_showConstraints -> false, '_label -> "", 'class -> "",
+                'readonly -> "readonly")</td>
+              <td>@checkbox(alertForm("voltageAlertNotification"), '_showConstraints -> false, '_label -> "")</td>
+              <td>@inputText(alertForm("minAcceptableVoltage"), '_showConstraints -> false, '_label -> "",
+                'class -> "input-mini")</td>
+              <td>@inputText(alertForm("maxAcceptableVoltage"), '_showConstraints -> false, '_label -> "",
+                'class -> "input-mini")</td>
+              <td>@checkbox(alertForm("frequencyAlertNotification"), '_showConstraints -> false, '_label -> "")</td>
+              <td>@inputText(alertForm("minAcceptableFrequency"), '_showConstraints -> false, '_label -> "",
+                'class -> "input-mini")</td>
+              <td>@inputText(alertForm("maxAcceptableFrequency"), '_showConstraints -> false, '_label -> "",
+                'class -> "input-mini")</td>
+              <td>@checkbox(alertForm("deviceAlertNotification"), '_showConstraints -> false, '_label -> "")</td>
+              <td><input type="submit" class="btn btn-warning pull-right" value="Update"></td>
+            </tr>
+          }
         }
-      }
         @form(routes.Administration.saveAlert(), 'class -> "form-inline") {
           <tr>
             <td>
@@ -82,13 +87,20 @@ Copyright 2013 Anthony Christe
               '_default -> "--- Select Device ---",
               'id -> "deviceId")
             </td>
-            <td>@checkbox(alertNotificationForm("voltageAlertNotification"), '_showConstraints -> false, '_label -> "")</td>
-            <td>@inputText(alertNotificationForm("minAcceptableVoltage"), '_showConstraints -> false, 'placeholder -> "117.0", '_label -> "", 'class -> "input-mini")</td>
-            <td>@inputText(alertNotificationForm("maxAcceptableVoltage"), '_showConstraints -> false, 'placeholder -> "123.0",  '_label -> "", 'class -> "input-mini")</td>
-            <td>@checkbox(alertNotificationForm("frequencyAlertNotification"), '_showConstraints -> false, '_label -> "")</td>
-            <td>@inputText(alertNotificationForm("minAcceptableFrequency"), '_showConstraints -> false, 'placeholder -> "57.0",  '_label -> "", 'class -> "input-mini")</td>
-            <td>@inputText(alertNotificationForm("maxAcceptableFrequency"), '_showConstraints -> false, 'placeholder -> "63.0",  '_label -> "", 'class -> "input-mini")</td>
-            <td>@checkbox(alertNotificationForm("deviceAlertNotification"), '_showConstraints -> false, '_label -> "")</td>
+            <td>@checkbox(alertNotificationForm("voltageAlertNotification"), '_showConstraints -> false,
+              '_label -> "")</td>
+            <td>@inputText(alertNotificationForm("minAcceptableVoltage"), '_showConstraints -> false,
+              'placeholder -> "117.0", '_label -> "", 'class -> "input-mini")</td>
+            <td>@inputText(alertNotificationForm("maxAcceptableVoltage"), '_showConstraints -> false,
+              'placeholder -> "123.0", '_label -> "", 'class -> "input-mini")</td>
+            <td>@checkbox(alertNotificationForm("frequencyAlertNotification"), '_showConstraints -> false,
+              '_label -> "")</td>
+            <td>@inputText(alertNotificationForm("minAcceptableFrequency"), '_showConstraints -> false,
+              'placeholder -> "57.0", '_label -> "", 'class -> "input-mini")</td>
+            <td>@inputText(alertNotificationForm("maxAcceptableFrequency"), '_showConstraints -> false,
+              'placeholder -> "63.0", '_label -> "", 'class -> "input-mini")</td>
+            <td>@checkbox(alertNotificationForm("deviceAlertNotification"), '_showConstraints -> false,
+              '_label -> "")</td>
             <td><input type="submit" class="btn btn-primary pull-right" value="Add Alert"></td>
           </tr>
         }
