--- a/app/views/menu.scala.html
+++ b/app/views/menu.scala.html
@@ -1,51 +1,54 @@
 @*
-    This file is part of opq-ao.
+This file is part of opq-ao.
 
-    opa-ao is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+opa-ao is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
 
-    opa-ao is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
+opa-ao is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
-    along with opq-ao.  If not, see <http://www.gnu.org/licenses/>.
+You should have received a copy of the GNU General Public License
+along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 
-    Copyright 2013 Anthony Christe
+Copyright 2013 Anthony Christe
 *@
 
 @(title: String, publicMenu: Boolean)
 
-    @createMenuItem(text: String, selectOn: String, link: play.api.mvc.Call) = {
+  @createMenuItem(text: String, selectOn: String, link: play.api.mvc.Call) = {
     @if(title.toLowerCase().contains(selectOn)) {
-        <li class="active">
-        } else {
-        <li>
-        }
-        <a href="@link">@text</a>
-    </li>
-    }
+      <li class="active">
+      } else {
+      <li>
+      }
+    <a href="@link">@text</a>
+  </li>
+  }
 
-<div class="navbar">
+  <div class="navbar">
     <div class="navbar-inner">
-        <div class="container">
-            <a class="brand" href="#">Open Power Quality</a>
-            <div class="navbar-content">
-                <ul class="nav">
-                @if(publicMenu) {
-                    @createMenuItem("Getting Started", "getting started with opq", routes.Application.index())
-                    @createMenuItem("Public Power Quality Monitoring", "power quality monitoring", routes.PowerQualityMonitoring.publicMonitor())
-                } else {
-                    @createMenuItem("Home", "home", routes.Application.index())
-                    @createMenuItem("Administration", "administration", routes.Administration.user())
-                    @createMenuItem("Private Power Quality Monitoring", "private power quality monitoring", routes.PowerQualityMonitoring.privateMonitor())
-                    @createMenuItem("Public Power Quality Monitoring", "public power quality monitoring", routes.PowerQualityMonitoring.publicMonitor())
-                }
-                </ul>
-            </div>
+      <div class="container">
+        <a class="brand" href="#">Open Power Quality</a>
+        <div class="navbar-content">
+          <ul class="nav">
+          @if(publicMenu) {
+            @createMenuItem("Getting Started", "getting started with opq", routes.Application.index())
+            @createMenuItem("Public Power Quality Monitoring", "power quality monitoring",
+              routes.PowerQualityMonitoring.publicMonitor())
+          } else {
+            @createMenuItem("Home", "home", routes.Application.index())
+            @createMenuItem("Administration", "administration", routes.Administration.user())
+            @createMenuItem("Private Power Quality Monitoring", "private power quality monitoring",
+              routes.PowerQualityMonitoring.privateMonitor())
+            @createMenuItem("Public Power Quality Monitoring", "public power quality monitoring",
+              routes.PowerQualityMonitoring.publicMonitor())
+          }
+          </ul>
         </div>
+      </div>
     </div>
-</div>
+  </div>
