--- a/app/views/wizard/wizard_alert_notifications.scala.html
+++ b/app/views/wizard/wizard_alert_notifications.scala.html
@@ -1,62 +1,64 @@
 @*
-    This file is part of opq-ao.
+This file is part of opq-ao.
 
-    opa-ao is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+opa-ao is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
 
-    opa-ao is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
+opa-ao is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
-    along with opq-ao.  If not, see <http://www.gnu.org/licenses/>.
+You should have received a copy of the GNU General Public License
+along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 
-    Copyright 2013 Anthony Christe
+Copyright 2013 Anthony Christe
 *@
 
 @(alertNotificationForm: Form[models.AlertNotification])
 
-@import helper._
+  @import helper._
   @implicitFieldConstructor = @{
     FieldConstructor(twitterBootstrapInput.render)
   }
 
-<div class="row">
+  <div class="row">
     <div class="span9">
       @checkbox(alertNotificationForm("alertViaEmail"), '_label -> "E-Mail Alert", 'id -> "emailAlert")
-      @inputText(alertNotificationForm("notificationEmail"), '_label -> "Alert Address", 'placeholder -> "john.doe@email.com", 'id -> "notificationEmail")
-      <hr />
+      @inputText(alertNotificationForm("notificationEmail"), '_label -> "Alert Address",
+        'placeholder -> "john.doe@email.com", 'id -> "notificationEmail")
+    <hr />
       @checkbox(alertNotificationForm("alertViaSms"), '_label -> "SMS Alert", 'id -> "smsAlert")
       @select(
         alertNotificationForm("smsCarrier"),
         options = options(utils.FormUtils.LIST_OF_SMS_CARRIERS),
         '_label -> "SMS Carrier",
         'id -> "smsCarrier")
-      @inputText(alertNotificationForm("smsNumber"), '_label -> "SMS Number", 'placeholder -> "808-555-5555", 'id -> "smsNumber")
+      @inputText(alertNotificationForm("smsNumber"), '_label -> "SMS Number", 'placeholder -> "808-555-5555",
+        'id -> "smsNumber")
     </div>
     <div class="span3">
-        <div class="well well-small">
-            <p class="bold">Alert Notifications</p>
-            <p>
+      <div class="well well-small">
+        <p class="bold">Alert Notifications</p>
+        <p>
                 This section allows you to create notifications for alerts triggered in the previous section.
-                Notifications come in the form of SMS alerts, e-mail alerts, or both.
-            </p>
-            <p class="bold">E-Mail Alert</p>
-            <p>
+          Notifications come in the form of SMS alerts, e-mail alerts, or both.
+        </p>
+        <p class="bold">E-Mail Alert</p>
+        <p>
                 To enable e-mail alerts, make sure the "E-Mail Alert" checkbox is selected. Then supply an e-mail
-                address that the alert should be sent to.
-            </p>
-            <p class="bold">SMS Alert</p>
-            <p>
+          address that the alert should be sent to.
+        </p>
+        <p class="bold">SMS Alert</p>
+        <p>
                 To enable SMS alerts, make sure the "SMS Alert" checkbox is selected. Then select the carrier that
-                your SMS phone is under. Finally, provide your SMS number.
-            </p>
-            <p>
+          your SMS phone is under. Finally, provide your SMS number.
+        </p>
+        <p>
                 Examples: Offices, basement, uptown, etc
-            </p>
-        </div>
+        </p>
+      </div>
     </div>
-</div>
+  </div>
