--- a/app/views/wizard/wizard_cdsi.scala.html
+++ b/app/views/wizard/wizard_cdsi.scala.html
@@ -1,65 +1,69 @@
 @*
-    This file is part of opq-ao.
+This file is part of opq-ao.
 
-    opa-ao is free software: you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation, either version 3 of the License, or
-    (at your option) any later version.
+opa-ao is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
 
-    opa-ao is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
+opa-ao is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
 
-    You should have received a copy of the GNU General Public License
-    along with opq-ao.  If not, see <http://www.gnu.org/licenses/>.
+You should have received a copy of the GNU General Public License
+along with opq-ao. If not, see <http://www.gnu.org/licenses/>.
 
-    Copyright 2013 Anthony Christe
+Copyright 2013 Anthony Christe
 *@
 
 @(opqDeviceForm: Form[models.OpqDevice])
 
-@import helper._
+  @import helper._
   @implicitFieldConstructor = @{
     FieldConstructor(twitterBootstrapInput.render)
   }
 
-<div class="row">
+  <div class="row">
     <div class="span9">
       @inputText(opqDeviceForm("city"), '_label -> "Device City", 'placeholder -> "Kailua-Kona", 'id -> "deviceCity")
       @inputText(opqDeviceForm("zip"), '_label -> "Device Zip", 'placeholder -> "96739", 'id -> "deviceZip")
-      @inputText(opqDeviceForm("streetName"), '_label -> "Device Street Name", 'placeholder -> "Palani Rd", 'id -> "deviceStreetName")
-      @inputText(opqDeviceForm("streetNumber"), '_label -> "Device Street Number", 'placeholder -> "111", 'id -> "deviceStreetNumber")
-      @inputText(opqDeviceForm("latitude"), '_label -> "Device Latitude", 'placeholder -> "19.6406", 'id -> "deviceLatitude")
-      @inputText(opqDeviceForm("longitude"), '_label -> "Device Longitude", 'placeholder -> "-155.9956", 'id -> "deviceLongitude")
-      <hr />
+      @inputText(opqDeviceForm("streetName"), '_label -> "Device Street Name", 'placeholder -> "Palani Rd",
+        'id -> "deviceStreetName")
+      @inputText(opqDeviceForm("streetNumber"), '_label -> "Device Street Number", 'placeholder -> "111",
+        'id -> "deviceStreetNumber")
+      @inputText(opqDeviceForm("latitude"), '_label -> "Device Latitude", 'placeholder -> "19.6406",
+        'id -> "deviceLatitude")
+      @inputText(opqDeviceForm("longitude"), '_label -> "Device Longitude", 'placeholder -> "-155.9956",
+        'id -> "deviceLongitude")
+    <hr />
       @checkbox(opqDeviceForm("participatingInCdsi"), '_label -> "Participate in CDSI", 'id -> "participateInCdsi")
     </div>
     <div class="span3">
-        <div class="well well-small">
-            <p class="bold">Community Data Sharing Initiative</p>
-            <p>
+      <div class="well well-small">
+        <p class="bold">Community Data Sharing Initiative</p>
+        <p>
                 The Community Data Sharing Initiative (CDSI) allows users to opt-in for sharing their power quality
-                information to the public. You may include as little or as much information as you feel comfortable
-                with.
-            </p>
-            <p>
+          information to the public. You may include as little or as much information as you feel comfortable
+          with.
+        </p>
+        <p>
                 Please note that all fields refer to the location of the device you registered in "step 3".
-            </p>
-            <p class="bold">Opting-In</p>
-            <p>
+        </p>
+        <p class="bold">Opting-In</p>
+        <p>
                 To opt-in to the Community Data Sharing Initiative, make sure "Participate in CDSI" is selected. Then,
-                for each field that you would like to share with the public, fill it in. If you do not want to share
-                a field with the public, leave it blank.
-            </p>
-            <p class="bold">
+          for each field that you would like to share with the public, fill it in. If you do not want to share
+          a field with the public, leave it blank.
+        </p>
+        <p class="bold">
                 When Finished
-            </p>
-            <p>
+        </p>
+        <p>
                 This is the last step in the wizard. Review the information in previous steps and select "Finish" to
-                save the changes and exit the wizard. Remember, all of this information can later be edited in the
-                "Administration" section of the website.
-            </p>
-        </div>
+          save the changes and exit the wizard. Remember, all of this information can later be edited in the
+          "Administration" section of the website.
+        </p>
+      </div>
     </div>
-</div>
+  </div>
